<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:colorBackground">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@id/appBar"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?actionBarSize"
			app:navigationIcon="@drawable/close_24px"
			app:title="@string/fragment_settings_toolbar" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:id="@android:id/list_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		android:transitionGroup="true"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="8dp">

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				app:cardCornerRadius="8dp"
				app:cardElevation="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<com.google.android.material.switchmaterial.SwitchMaterial
						android:id="@+id/darkThemeSwitch"
						android:layout_marginStart="16dp"
						android:layout_marginEnd="16dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:enabled="false"
						android:text="@string/settings_switch_dark_theme" />

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<com.google.android.material.textfield.TextInputLayout
						style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginVertical="8dp"
						android:layout_marginHorizontal="16dp"
						android:hint="@string/settings_hint_home_capsule">

						<com.google.android.material.textfield.TextInputEditText
							android:id="@+id/homeCapsule"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<requestFocus />
						</com.google.android.material.textfield.TextInputEditText>
					</com.google.android.material.textfield.TextInputLayout>

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<com.google.android.material.switchmaterial.SwitchMaterial
						android:id="@+id/alwaysShowImagesSwitch"
						android:layout_marginStart="16dp"
						android:layout_marginEnd="16dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/settings_switch_always_show_images" />
				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_title_reset"
				android:layout_marginTop="16dp"
				android:layout_marginHorizontal="16dp"
				android:textAppearance="?textAppearanceHeadline6" />

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				app:cardCornerRadius="8dp"
				app:cardElevation="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:paddingTop="8dp"
						android:paddingStart="8dp"
						android:paddingEnd="8dp"
						android:paddingBottom="8dp">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical"
							android:paddingHorizontal="8dp">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:textAppearance="?textAppearanceBody1"
								android:text="@string/settings_clear_certificates_title" />

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:textAppearance="?textAppearanceBody2"
								android:text="@string/settings_clear_certificates_explanation" />
						</LinearLayout>

						<Button
							android:id="@+id/buttonClearCertificates"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/settings_button_clear" />
					</LinearLayout>

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:paddingTop="8dp"
						android:paddingStart="8dp"
						android:paddingEnd="8dp"
						android:paddingBottom="8dp">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical"
							android:paddingHorizontal="8dp">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:textAppearance="?textAppearanceBody1"
								android:text="@string/settings_clear_cache_title" />

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:textAppearance="?textAppearanceBody2"
								android:text="@string/settings_clear_cache_explanation" />
						</LinearLayout>

						<Button
							android:id="@+id/buttonClearCache"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/settings_button_clear" />
					</LinearLayout>

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingTop="8dp"
						android:paddingStart="8dp"
						android:paddingEnd="8dp"
						android:paddingBottom="8dp">

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/settings_reset_all_explanation"
							android:paddingHorizontal="8dp" />

						<Button
							android:id="@+id/buttonResetAll"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/settings_button_reset" />
					</LinearLayout>
				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
