<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="16dp"
	app:strokeColor="?colorError"
	app:strokeWidth="2dp"
	app:cardCornerRadius="4dp"
	android:backgroundTint="?colorSurface">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:textAppearance="?textAppearanceHeadline6"
			android:text="@string/gemini_page_security_issue_title" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:textAppearance="?textAppearanceBody1"
			android:lineSpacingMultiplier="1.2"
			android:text="@string/gemini_page_security_explanation_1" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:textAppearance="?textAppearanceBody2"
			android:lineSpacingMultiplier="1.2"
			android:text="@string/gemini_page_security_explanation_2" />
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>
