	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<FrameLayout
			android:id="@android:id/list_container"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">

			<View
				android:layout_width="match_parent"
				android:layout_height="8dp"
				android:background="?android:statusBarColor" />

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:cardElevation="0dp"
				app:cardPreventCornerOverlap="false"
				app:cardUseCompatPadding="false"
				app:shapeAppearance="@style/ViewportShape">

				<app.gemicom.views.GeminiView
					android:id="@id/geminiView"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.progressindicator.LinearProgressIndicator
				android:id="@+id/progressBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:indeterminate="true" />
		</FrameLayout>

		<com.google.android.material.appbar.AppBarLayout
			style="@style/Widget.AppBarBottom"
			android:id="@id/appBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:id="@+id/bottomBarHeader"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="8dp"
				android:layout_marginVertical="8dp"
				android:orientation="vertical"
				android:visibility="gone"
				tools:visibility="visible">

				<Button
					style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
					android:id="@+id/bottomHomeButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/browser_menu_home"
					app:icon="@drawable/home_24px" />

				<Button
					style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
					android:id="@+id/bottomPasteButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/browser_menu_paste"
					app:icon="@drawable/content_paste_go_24px" />
			</LinearLayout>

			<com.google.android.material.appbar.MaterialToolbar
				android:id="@id/bottomBar"
				android:background="@drawable/theme_bg_bottom_bar"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				android:elevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">

					<FrameLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1">

						<androidx.appcompat.widget.AppCompatAutoCompleteTextView
							android:id="@+id/addressBar"
							android:layout_width="match_parent"
							android:layout_height="42dp"
							android:layout_marginEnd="12dp"
							android:layout_marginStart="8dp"
							android:background="@drawable/bg_url_field_selector"
							android:gravity="center_vertical"
							android:hint="@string/browser_hint_enter_address"
							android:paddingStart="16dp"
							android:paddingEnd="40dp"
							android:textSize="16sp"
							android:inputType="textUri"
							android:maxLines="1"
							android:imeOptions="actionGo"
							tools:text="gemini://gemicom.app" />

						<ImageView
							android:id="@+id/addressBarClearButton"
							android:layout_width="20dp"
							android:layout_height="20dp"
							android:layout_gravity="center_vertical|end"
							android:layout_marginEnd="24dp"
							android:clickable="true"
							android:background="?selectableItemBackgroundBorderless"
							android:contentDescription="@string/alt_clear_address_bar"
							app:srcCompat="@drawable/cancel_24px" />
					</FrameLayout>

					<app.gemicom.views.TabsButton
						android:id="@id/tabsButton"
						android:background="?selectableItemBackgroundBorderless"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
				</LinearLayout>
			</com.google.android.material.appbar.MaterialToolbar>
		</com.google.android.material.appbar.AppBarLayout>
	</LinearLayout>
